# postgres-seren-replicator

./: .discord-notify.sh  .gitignore  AGENTS.md  CHANGELOG.md  Cargo.toml  README-MongoDB.md  README-MySQL.md  README-PostgreSQL.md  README-SQLite.md  README.md
.cargo/: audit.toml
.github/workflows/: auto-close-issues.yml  ci.yml  release.yml
aws/: .api_endpoint  DEPLOYMENT_READY.md  README.md  TESTING.md  deploy.sh  test-integration.sh  test-smoke.sh
aws/ec2/: README.md  build-ami.sh  setup-worker.sh  worker.sh
aws/lambda/: handler.py
aws/terraform/: README.md  backend-config.example.hcl  backend.tf.example  main.tf  outputs.tf
aws/terraform/environments/: dev.tfvars  prod.tfvars  staging.tfvars
docs/: cicd.md  integration-testing.md  performance-report.md  replication-config.md  security-audit-report.md
src/: checkpoint.rs  config.rs  filters.rs  interactive.rs  lib.rs  main.rs  table_rules.rs  utils.rs
src/commands/: init.rs  mod.rs  status.rs  sync.rs  validate.rs  verify.rs
src/jsonb/: mod.rs  writer.rs
src/migration/: dump.rs  estimation.rs  filtered.rs  mod.rs  restore.rs  schema.rs
src/mongodb/: converter.rs  mod.rs  reader.rs
src/mysql/: converter.rs  mod.rs  reader.rs
src/postgres/: connection.rs  extensions.rs  mod.rs  privileges.rs
src/remote/: mod.rs
src/replication/: publication.rs  subscription.rs
src/sqlite/: converter.rs  mod.rs  reader.rs
tests/: integration_remote_test.rs  integration_test.rs  mysql_integration_test.rs  performance_test.rs  security_test.rs  sqlite_integration_test.rs
