[package]
name = "neon-seren-replicator"
version = "0.2.1"
edition = "2021"
license = "Apache-2.0"
description = "Zero-downtime PostgreSQL replication tool from Neon to Seren with continuous sync and monitoring"
repository = "https://github.com/serenorg/neon-seren-replicator"
readme = "README.md"
keywords = ["postgresql", "replication", "database", "neon", "cdc"]
categories = ["command-line-utilities", "database"]

[dependencies]
tokio = { version = "1.35", features = ["full"] }
tokio-postgres = "0.7"
clap = { version = "4.4", features = ["derive"] }
anyhow = "1.0"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
postgres-native-tls = "0.5"
native-tls = "0.2"
tempfile = "3.8"
futures = "0.3"
indicatif = "0.17"
which = "6.0"
